[tool.poetry]
name = "us-population-heatmap"
version = "0.1.0"
description = ""
authors = ["Phillip Cutter <mrfleap@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyshp = "^2.1.3"
colour = "^0.1.5"
Shapely = "^1.8.0"
pyproj = "^3.3.0"
tqdm = "^4.62.3"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
